<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">动画城</string>
    <string name="view_transform">view_transform</string>
    <string name="bitmap_mesh">bitmap_mesh</string>
    <string name="view_property">view_property</string>
    <string name="besier">贝塞尔曲线</string>
    <string name="launch_app">启动第三方应用</string>
    <string name="title_activity_app_start">AppStartActivity</string>
    <string name="toast">一直在模仿，从未能超越 !</string>
    <string name="self_view">自定义view时measure方法的考量</string>
    <string name="fake_weibo">仿新浪微博雷达扫描效果及相关功能实现</string>
    <string name="ball">小球虽手指移动效果</string>
    <string name="fake_football">仿懂球帝APP我是教练游戏效果</string>
    <string name="game_2048">game 2048</string>
    <string name="reverse_gif">gif 倒放效果图</string>
    <string name="football">足球11人</string>
    <string name="webview">webView</string>
    <string name="webview1">How to use webView</string>
    <string name="loader">Loader 动画</string>
    <string name="lottie_anim">Airbnb Lottie 动画</string>
    <string name="flip_3d_View">FlipView 3D 效果</string>
    <string name="take_screen">截屏</string>
    <string name="viewpager_nested">ViewPager 嵌套</string>
    <string name="full_screen">全屏</string>
    <string name="pdf_view">Android PDF 生成及打印</string>
    <string name="mail_view">Android 原生发邮件功能-调用系统邮箱</string>
    <string name="puzzle_game">拼图游戏</string>
    <string name="imode">沉寝式状态栏</string>
    <string name="waveAnim">波浪动画</string>
    <string name="webviewInfo">webview 相关内容</string>
    <string name="camera">Camera 和 Galley 使用笔记</string>
    <string name="bottomSheet">bottomSheet</string>
    <string name="image_cache">image_cache</string>
    <string name="bga_view">BGA 全家桶系列</string>
    <string name="circle_view">Glide 加载圆形图片</string>
    <string name="input_view">EditText - 获取mac 地址</string>
    <string name="orientation">Activity 横竖屏切换</string>
    <string name="optional">Java 8 Optional 使用</string>
    <string name="clipboard">Android ClipBoard 使用</string>
    <string name="ViewStub">layout ViewStub</string>
    <string name="ViewMerge">layout Merge Include</string>
    <string name="wheelView">省市联动3D效果</string>
    <string name="polygonView">PolygonView</string>
    <string name="profile">imitate douban</string>
    <string name="pull_to_scale">下拉放大效果</string>
    <string name="view_drag">view drag helper</string>
    <string name="master">Paint 设置Shader效果</string>
    <string name="filter">Paint 设置Filter效果</string>
    <string name="jianshu">仿简书长按生成图片效果</string>
    <string name="clockView">简易时钟</string>
    <string name="base_recyclerview">RecyclerView 使用</string>
    <string name="read_jar">read jar</string>
    <string name="jianshuhead">仿简书头部搜索栏效果</string>
    <string name="swipemenu">侧滑菜单效果</string>
    <string name="pullzoom">下拉放大效果</string>
    <string name="flipView">FlipView 效果</string>
    <string name="swipeFinish">Swipe Finish Activity</string>
    <string name="Matisse">Matisse 相册效果</string>
    <string name="PreviewOne">预览大图效果 1</string>
    <string name="PreviewTwo">预览大图效果 2</string>
    <string name="flowlayout">标签流水布局</string>
    <string name="switcher">switcher</string>
    <string name="stackView">stackView</string>
    <string name="dragBubbleView">dragBubbleView</string>
    <string name="easy">easy</string>
    <string name="hard">hard</string>
    <string name="crazy">crazy</string>
    <string name="module_info">imitate 没有以 module 的形式运行，请修改 gradle.properties 的配置</string>
    <string name="gpu_pixel">gpu_pixel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_vpanim">VPAnimActivity</string>
    <string name="label_indeterminate">Indeterminate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="label_level">Level</string>
    <string name="label_amplitude">Amplitude</string>
    <string name="label_speed">Speed</string>
    <string name="label_length">Length</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="title_activity_utril_view">UtrilViewActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="toggle_fullscreen">Long click to toggle fullscreen</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM
    </string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_college">CollegeActivity</string>
    <string name="file_util">文件操作</string>
    <string name="catch_null">catch null</string>
    <string name="data_view_chart">Activity 启动记录</string>
</resources>